Fixed issue with styles to ensure that there is never any overflow in the document body.

--- a/pushpop.css
+++ b/pushpop.css
@@ -23,8 +23,12 @@ html {
 
 body {
   background: #000;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   font-size: 13px;
   line-height: 1.25em;
 }
